welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var nb:Int=0
	var lookingFor:Int=value
	for (i<-0 to tab.length-1) {
		if (tab(i)==lookingFor) {
			return i
		}
	}
	return -1
}
